--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,11 @@ Logs/
 # C extensions
 *.so
 #Confidential
-*token.py
+token.py
 
 # Distribution / packaging
 .Python
+.idea/
 build/
 develop-eggs/
 dist/
